# MR-Instinctive-Robot-Control-via-Hololens2

./: README.md
interbotix_hand_joy/: CMakeLists.txt  README.md  package.xml
interbotix_hand_joy/launch/: hand_joy.launch
interbotix_hand_joy/scripts/: hand_joystick_control
interbotix_hand_joy/srv/: GripperPosition.srv  SetWaistAngle.srv
